--- a/ApiStore/appsettings.json
+++ b/ApiStore/appsettings.json
@@ -11,11 +11,13 @@
   "ImageSizes": "50,150,300,600,1200",
 
 
-  "Jwt": {
-    "Key": "jzw2hkFud3S1GreW4bwpE41Lx01nSatK",
-    "Issuer": "ApiStore",
-    "Audience": "http://localhost:5173/"
-  }
-  
+  // "Jwt": {
+  //   "Key": "jzw2hkFud3S1GreW4bwpE41Lx01nSatK",
+  //   "Issuer": "ApiStore",
+  //   "Audience": "http://localhost:5173/"
+  // },
+
+  "JwtSecretKey": "adlfjalUIYUuihafy349874k765gy32lNLJLhfasify93shfRQR##%^#&&^%@#$!sljdfl33"
+
 
 }
